# eKandado

./: .editorconfig  README.md  meson.build  package-lock.json  package.json
.github/: pull.yml
compositor/: Animation.vala  Background.vala  BackgroundCache.vala  BackgroundContainer.vala  BackgroundManager.vala  BackgroundSource.vala  DBus.vala  DBusAccelerator.vala  MediaFeedback.vala  SystemBackground.vala  Utils.vala  WindowManager.vala  WingpanelBackgroundManager.vala  WingpanelDBus.vala  WingpanelUtils.vala  main.vala  meson.build
data/: com.paysonwallach.greeter.gschema.xml  com.paysonwallach.portico.desktop.in.in  com.paysonwallach.portico.gschema.xml  compositor.gresource.xml  greeter.gresource.xml  meson.build  style.css
meson/: post_install.py
meta/: README.md.njk
po/: POTFILES  com.paysonwallach.portico.pot
src/: Application.vala  BackgroundManager.vala  FPrintUtils.vala  MainWindow.vala  PantheonAccountsServicePlugin.vala  PromptText.vala  Settings.vala  SettingsDaemon.vala  SubprocessSupervisor.vala  meson.build
src/Cards/: BaseCard.vala  ManualCard.vala  UserCard.vala
src/Widgets/: BackgroundImage.vala  CapsLockRevealer.vala  PasswordEntry.vala  SessionButton.vala
